--- a/driver/dshidmini.vcxproj.filters
+++ b/driver/dshidmini.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="IPC.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DsScanner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HID\06_DLS_Col1_Scanner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.c">
@@ -231,6 +237,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IPC.Device.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DsScanner.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
