--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 3.3.{build}.0
 build_cloud: WIN-LKR467JS4GL
-image: Windows
+image: Visual Studio 2022
 test: off
 environment:
   DmfRootPath: C:\projects\DMF
